Configuration version desktop
Section 3 toujours problématique. Certains ajustements ont des effets sur les versions mobiles.

--- a/assets/css/scss/components/_cards_section2.scss
+++ b/assets/css/scss/components/_cards_section2.scss
@@ -33,7 +33,8 @@
     }
     @media screen and (min-width: $desktop) {
       position: relative;
-      left: -11%;
+      left: -27%;
+      margin: 0;
     }
   }
   .section2__icon {
@@ -45,7 +46,7 @@
     }
     @media screen and (min-width: $desktop) {
       position: relative;
-      left: -14%;
+      left: -18%;
     }
   }
   .section2__text {
