--- a/assets/css/scss/components/_cards_section3.scss
+++ b/assets/css/scss/components/_cards_section3.scss
@@ -17,6 +17,9 @@
 
   .resto-prev__cardlink {
     color: black;
+    @media screen and (min-width: $desktop){
+      
+    }
   }
   .card--new {
     display: flex;
@@ -52,11 +55,17 @@
   .description__title {
     width: 70%;
     font-weight: bold;
+    @media screen and (min-width: $tablet){
+      width: auto;
+    }
   }
   .description__subtitle {
     width: 60%;
     margin-top: -15px;
     font-weight: normal;
+    @media screen and (min-width: $desktop){
+      width: 100%;
+    }
   }
   .description__hearticon {
     font-size: 30px;
@@ -66,6 +75,10 @@
       position: relative;
       bottom: 75%;
       left: 25%;
+    }
+    @media screen and (min-width: $desktop){
+      left: 82%;
+      bottom: 99%;
     }
   }
 }
