--- a/assets/css/scss/pages/_index.scss
+++ b/assets/css/scss/pages/_index.scss
@@ -63,6 +63,7 @@ main {
         @include flexbox-rowcenter;
         font-size: $title2-size;
         margin-top: 90px;
+        font-size: $title-size;
       }
     }
   }
