--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,7 @@ p {
 }
 
 img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 body {
@@ -130,7 +129,7 @@ body {
 @media screen and (min-width: 992px) {
   .section2__card .section2__number {
     position: relative;
-    left: -27%;
+    left: -24%;
     margin: 0;
   }
 }
@@ -337,6 +336,8 @@ body {
     border-radius: 139px;
     box-shadow: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
     background: #ff79da;
+    background: -moz-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+    background: -webkit-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
     background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   }
 }
@@ -615,4 +616,4 @@ main .section3 {
   padding-top: 10px;
   padding-bottom: 80px;
   background-color: #f6f6f6;
-}/*# sourceMappingURL=style.css.map */
+}
