--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -32,9 +32,7 @@ a {
 
 p {
   font-family: Roboto;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
+  @include text-shorten;
 }
 
 img {
