--- a/assets/css/scss/components/_menu-cards.scss
+++ b/assets/css/scss/components/_menu-cards.scss
@@ -1,49 +1,71 @@
 .menu-card {
-  @media screen and (max-width: $smartphone) {
-    background-color: $background-color-grey;
-    .card_maintitle {
-      font-size: $title2-size;
-      font-weight: normal;
-      padding-left: 28px;
-    }
-    .maintitle_border{
-      width: 10%;
-      border-bottom: 3px solid $tertiary-color;
-      margin-top: -10px;
-      margin-bottom: 20px;
-      margin-left: 28px;
-    }
-    .card {
-      @include flexbox-rowcenter;
-      width: 90%;
-      height: 70px;
-      flex-wrap: wrap;
-      border-radius: 20px 20px 20px 20px;
-      color: black;
-      background-color: white;
-      text-decoration: none;
-      box-shadow: 5px 5px 8px 5px #dfdfdf;
-      margin-bottom: 20px;
-      padding: 15px;
-    }
-    .card_title {
-      font-weight: bold;
+  background-color: $background-color-grey;
+  @media screen and (min-width: $tablet) {
+    @include flexbox-spacebetween;
+    flex-wrap: wrap;
+  }
+  .card_maintitle {
+    font-size: $title2-size;
+    font-weight: normal;
+    padding-left: 28px;
+    @media screen and (min-width: $tablet) {
+      text-align: center;
       width: 100%;
-      margin: 0;
-      font-size: $card-title;
     }
-    .card_subtitle {
-      width: 92%;
-      margin: 0;
-      font-size: $card-subtitle;
-      margin-top: -15px;
+  }
+  .maintitle_border {
+    width: 10%;
+    border-bottom: 3px solid $tertiary-color;
+    margin-top: -10px;
+    margin-bottom: 20px;
+    margin-left: 28px;
+    @media screen and (min-width: $tablet) {
+      width: 100%;
     }
-    .card_price {
-      font-weight: bold;
-      margin-top: 2px;
+  }
+  .card {
+    @include flexbox-rowcenter;
+    width: 90%;
+    height: 70px;
+    flex-wrap: wrap;
+    border-radius: 20px 20px 20px 20px;
+    color: black;
+    background-color: white;
+    text-decoration: none;
+    box-shadow: 5px 5px 8px 5px #dfdfdf;
+    margin-bottom: 20px;
+    padding: 15px;
+    @media screen and (min-width: $tablet) {
+      width: 30%;
+      @include flexbox-columncenter;
+      flex-wrap: wrap;
+      height: 150px;
     }
-    .card_checkicon {
-      display: none;
+  }
+  .card_title {
+    font-weight: bold;
+    width: 100%;
+    margin: 0;
+    font-size: $card-title;
+    @media screen and (min-width: $tablet) {
+      @include flexbox-columncenter;
+      margin-bottom: 15px;
     }
+  }
+  .card_subtitle {
+    width: 92%;
+    margin: 0;
+    font-size: $card-subtitle;
+    margin-top: -15px;
+    @media screen and (min-width: $tablet) {
+      @include flexbox-columncenter;
+    }
+  }
+  .card_price {
+    font-weight: bold;
+    margin-top: 2px;
+  }
+  .card_checkicon {
+    display: none;
   }
 }
