--- a/assets/css/scss/pages/_restaurant.scss
+++ b/assets/css/scss/pages/_restaurant.scss
@@ -66,6 +66,7 @@
 // Début de la section order
 
 .order {
+  width: 100%;
   padding-top: 10px;
   padding-bottom: 80px;
   background-color: $background-color-grey;
