--- a/assets/css/scss/components/_cards_section2.scss
+++ b/assets/css/scss/components/_cards_section2.scss
@@ -10,9 +10,11 @@
   background-color: $background-color-grey;
   @media screen and (min-width: $tablet) {
     width: 80%;
+    position: relative;
   }
   @media screen and (min-width: $desktop) {
     @include flexbox-rowcenter;
+    position: relative;
     width: 28%;
     margin: auto;
     margin-top: 0;
@@ -29,11 +31,12 @@
     border-radius: 50%;
     background-color: $primary-color;
     @media screen and (min-width: $tablet) {
+      position: absolute;
       left: 12%;
     }
     @media screen and (min-width: $desktop) {
-      position: relative;
-      left: -24%;
+      position: absolute;
+      left: -2%;
       margin: 0;
     }
   }
@@ -42,11 +45,12 @@
     position: absolute;
     left: 60px;
     @media screen and (min-width: $tablet) {
+      position: absolute;
       left: 25%;
     }
     @media screen and (min-width: $desktop) {
-      position: relative;
-      left: -18%;
+      position: absolute;
+      left: 8%;
     }
   }
   .section2__text {
@@ -56,8 +60,8 @@
       font-size: $title2-size;
     }
     @media screen and (min-width: $desktop) {
-      position: relative;
-      left: -10%;
+      position: absolute;
+      left: 15%;
     }
   }
 }
