Ajout d'une min-width pour les cartes de la section 2

--- a/assets/css/scss/components/_cards_section2.scss
+++ b/assets/css/scss/components/_cards_section2.scss
@@ -2,7 +2,9 @@
   @include flexbox-rowcenter;
   text-decoration: none;
   color: black;
+  box-sizing: border-box;
   width: 90%;
+  min-width: 310px;
   height: 70px;
   margin-top: 30px;
   box-shadow: $boxshadow-standard;
