--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,9 @@ body {
   margin: auto;
   text-decoration: none;
   color: black;
+  box-sizing: border-box;
   width: 90%;
+  min-width: 310px;
   height: 70px;
   margin-top: 30px;
   box-shadow: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
