--- a/assets/css/scss/components/_cards_section3.scss
+++ b/assets/css/scss/components/_cards_section3.scss
@@ -71,6 +71,9 @@
     font-size: 30px;
     position: absolute;
     right: 15%;
+    &:hover {
+      color: transparent;
+    }
     @media screen and (min-width: $tablet) {
       position: relative;
       bottom: 75%;
@@ -79,6 +82,17 @@
     @media screen and (min-width: $desktop) {
       left: 82%;
       bottom: 99%;
+    }
+  }
+  .description__hearticonfill {
+    font-size: 30px;
+    position: absolute;
+    right: 11%;
+    top: 221px;
+    visibility: hidden;
+    &:hover {
+      visibility: visible;
+      color: red;
     }
   }
 }
