--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -43,3 +43,14 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.loader {
+  border: 16px solid $background-color-grey;
+  border-top: 16px solid $primary-color;
+  border-bottom: 16px solid $secondary-color;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  display:none;
+}
