--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,17 @@
-@keyframes displayCoeur {
+@keyframes displayheart {
   from {
     color: white;
   }
-  25% {
-    color: yellow;
-  }
-  75% {
-    color: green;
-  }
   to {
-    color: violet;
+    color: #ff79da;
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
 /*
@@ -60,6 +62,17 @@ img {
 body {
   margin: 0;
   padding: 0;
+}
+
+.loader {
+  border: 16px solid #f6f6f6;
+  border-top: 16px solid #9356dc;
+  border-bottom: 16px solid #ff79da;
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  display: none;
 }
 
 .section1__searchbutton {
@@ -288,7 +301,7 @@ body {
 }
 .resto-prev__card .description__hearticon:hover i:last-child {
   display: block;
-  animation: displayCoeur 0.5s ease-in-out forwards;
+  animation: displayheart 1s ease-in-out forwards;
 }
 @media screen and (min-width: 576px) {
   .resto-prev__card .description__hearticon {
@@ -302,17 +315,6 @@ body {
     left: 82%;
     bottom: 99%;
   }
-}
-.resto-prev__card .description__hearticonfill {
-  font-size: 30px;
-  position: absolute;
-  right: 11%;
-  top: 221px;
-  visibility: hidden;
-}
-.resto-prev__card .description__hearticonfill:hover {
-  visibility: visible;
-  color: red;
 }
 
 .menu-card {
