--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,8 +391,8 @@ body {
 }
 .menu-card .splitright {
   position: absolute;
-  top: 38px;
-  right: 20px;
+  top: -86px;
+  right: 0px;
 }
 .menu-card .card_title {
   font-weight: bold;
@@ -428,7 +428,10 @@ body {
   margin-top: 2px;
 }
 .menu-card .card_checkicon {
-  display: none;
+  background-color: #99e2d0;
+  width: 100%;
+  font-size: 150px;
+  border-radius: 0px 20px 20px 0px;
 }
 
 .order_button {
