--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -44,13 +44,30 @@ body {
   padding: 0;
 }
 
+header,
+main,
+footer {
+  animation: fadein 2s;
+}
+
 .loader {
+  position: fixed;
+  top: 25em;
+  left: 3em;
   border: 16px solid $background-color-grey;
   border-top: 16px solid $primary-color;
   border-bottom: 16px solid $secondary-color;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-  display:none;
+  width: 300px;
+  height: 300px;
+  animation: spin 3s linear infinite, fadeout 2.5s forwards;
+  z-index: 2;
+  @media screen and (min-width: $tablet) {
+    top: 32em;
+    left: 16em;
+  }
+  @media screen and(min-width:$desktop) {
+    top: 25em;
+    left: 50em;
+  }
 }
