--- a/assets/css/scss/utils/_keyframes.scss
+++ b/assets/css/scss/utils/_keyframes.scss
@@ -1,3 +1,4 @@
+// Coloration du coeur
 @keyframes displayheart {
   from {
     color: white;
@@ -13,6 +14,9 @@
   }
 }
 
+// Fin de coloration du coeur
+
+// Rotation du loader
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -22,6 +26,39 @@
   }
 }
 
+// Fin de la rotation du loader
+
+// Animation des fondus
+
+@keyframes fadein {
+  0% {
+    opacity: 0.2;
+  }
+
+  50% {
+    opacity: 0.2;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeout {
+  0% {
+    opacity: 1;
+  }
+
+  75% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+// Fin de l'animation des fondus
 /*
 translateY();
 translate3d(x,y,z);
