--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,28 @@
     transform: rotate(360deg);
   }
 }
+@keyframes fadein {
+  0% {
+    opacity: 0.2;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fadeout {
+  0% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 /*
 translateY();
 translate3d(x,y,z);
@@ -64,15 +86,36 @@ body {
   padding: 0;
 }
 
+header,
+main,
+footer {
+  animation: fadein 2s;
+}
+
 .loader {
+  position: fixed;
+  top: 25em;
+  left: 3em;
   border: 16px solid #f6f6f6;
   border-top: 16px solid #9356dc;
   border-bottom: 16px solid #ff79da;
   border-radius: 50%;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
-  display: none;
+  width: 300px;
+  height: 300px;
+  animation: spin 3s linear infinite, fadeout 2.5s forwards;
+  z-index: 2;
+}
+@media screen and (min-width: 576px) {
+  .loader {
+    top: 32em;
+    left: 16em;
+  }
+}
+@media screen and (min-width: 992px) {
+  .loader {
+    top: 25em;
+    left: 50em;
+  }
 }
 
 .section1__searchbutton {
