--- a/assets/css/scss/components/_button_section1.scss
+++ b/assets/css/scss/components/_button_section1.scss
@@ -10,7 +10,7 @@
   border: 1px solid #fdfdfd;
   border-radius: 139px;
   box-shadow: $boxshadow-standard;
-  background: #ff79da;
+  background: $button-color;
   background: linear-gradient(120deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   transition: all 500ms ease-in-out;
   background-size: 400% 400%;
