Configuration bouton de commande
Ajustement de l'animation du bouton de commande ainsi que du changement de couleur. Transformation du curseur en pointeur.

--- a/assets/css/scss/components/_button_section1.scss
+++ b/assets/css/scss/components/_button_section1.scss
@@ -14,9 +14,11 @@
   background: linear-gradient(120deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   transition: all 500ms ease-in-out;
   background-size: 400% 400%;
+  animation: gradientshift 3s ease-in-out infinite;
   &:hover {
     transform: scale(1.2);
-    animation: gradientshift 5s ease infinite;
+ 
+    cursor: pointer;
   }
   @media screen and (min-width: $tablet) {
     width: 40%;
