--- a/assets/css/scss/components/_order_button.scss
+++ b/assets/css/scss/components/_order_button.scss
@@ -23,4 +23,19 @@
     #9356dc 100%
   );
   background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+  background: linear-gradient(120deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+  transition: all 500ms ease-in-out;
+  background-size: 400% 400%;
+  animation: gradientshift 3s ease-in-out infinite;
+  &:hover {
+    transform: scale(1.2);
+ 
+    cursor: pointer;
+  }
+  @media screen and (min-width: $tablet) {
+    width: 40%;
+  }
+  @media screen and (min-width: $desktop) {
+    width: 20%;
+  }
 }
