--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+@-webkit-keyframes displayheart {
+  from {
+    color: white;
+  }
+  to {
+    color: #ff79da;
+  }
+}
 @keyframes displayheart {
   from {
     color: white;
@@ -6,12 +14,31 @@
     color: #ff79da;
   }
 }
+@-webkit-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 @keyframes spin {
   0% {
     transform: rotate(0deg);
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes fadein {
+  0% {
+    opacity: 0.2;
+  }
+  50% {
+    opacity: 0.2;
+  }
+  100% {
+    opacity: 1;
   }
 }
 @keyframes fadein {
@@ -25,6 +52,17 @@
     opacity: 1;
   }
 }
+@-webkit-keyframes fadeout {
+  0% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 @keyframes fadeout {
   0% {
     opacity: 1;
@@ -34,6 +72,17 @@
   }
   100% {
     opacity: 0;
+  }
+}
+@-webkit-keyframes gradientshift {
+  0% {
+    background-position: 0% 92%;
+  }
+  50% {
+    background-position: 100% 9%;
+  }
+  100% {
+    background-position: 0% 92%;
   }
 }
 @keyframes gradientshift {
@@ -89,7 +138,8 @@ p {
 }
 
 img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 body {
@@ -100,7 +150,8 @@ body {
 header,
 main,
 footer {
-  animation: fadein 3s;
+  -webkit-animation: fadein 3s;
+          animation: fadein 3s;
 }
 
 .loader {
@@ -113,7 +164,8 @@ footer {
   border-radius: 50%;
   width: 300px;
   height: 300px;
-  animation: spin 3s linear infinite, fadeout 2.2s forwards;
+  -webkit-animation: spin 3s linear infinite, fadeout 2.2s forwards;
+          animation: spin 3s linear infinite, fadeout 2.2s forwards;
   z-index: 2;
 }
 @media screen and (min-width: 576px) {
@@ -149,10 +201,12 @@ footer {
   background: linear-gradient(120deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   transition: all 500ms ease-in-out;
   background-size: 400% 400%;
+  -webkit-animation: gradientshift 3s ease-in-out infinite;
+          animation: gradientshift 3s ease-in-out infinite;
 }
 .section1__searchbutton:hover {
   transform: scale(1.2);
-  animation: gradientshift 5s ease infinite;
+  cursor: pointer;
 }
 @media screen and (min-width: 576px) {
   .section1__searchbutton {
@@ -361,7 +415,8 @@ footer {
 }
 .resto-prev__card .description__hearticon:hover i:last-child {
   display: block;
-  animation: displayheart 1s ease-in-out forwards;
+  -webkit-animation: displayheart 1s ease-in-out forwards;
+          animation: displayheart 1s ease-in-out forwards;
 }
 @media screen and (min-width: 576px) {
   .resto-prev__card .description__hearticon {
@@ -510,9 +565,26 @@ footer {
   border-radius: 139px;
   box-shadow: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
   background: #ff79da;
-  background: -moz-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
-  background: -webkit-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+  background: linear-gradient(120deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+  transition: all 500ms ease-in-out;
+  background-size: 400% 400%;
+  -webkit-animation: gradientshift 3s ease-in-out infinite;
+          animation: gradientshift 3s ease-in-out infinite;
+}
+.order_button:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+@media screen and (min-width: 576px) {
+  .order_button {
+    width: 40%;
+  }
+}
+@media screen and (min-width: 992px) {
+  .order_button {
+    width: 20%;
+  }
 }
 
 .index-head {
@@ -801,4 +873,4 @@ main .section3 {
   padding-top: 10px;
   padding-bottom: 80px;
   background-color: #f6f6f6;
-}
+}/*# sourceMappingURL=style.css.map */
