--- a/assets/css/scss/components/_menu-cards.scss
+++ b/assets/css/scss/components/_menu-cards.scss
@@ -51,7 +51,7 @@
   }
   .splitright {
     position: absolute;
-    top: -86px;
+    top: 0px;
     right: 0px;
   }
   .card_title {
@@ -80,7 +80,8 @@
   .card_checkicon {
     background-color: $tertiary-color;
     width: 100%;
-    font-size: 150px;
+    font-size: 130px;
     border-radius: 0px 20px 20px 0px;
+    margin: 0;
   }
 }
