--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -506,7 +506,7 @@ footer {
 }
 .menu-card .splitright {
   position: absolute;
-  top: -86px;
+  top: 0px;
   right: 0px;
 }
 .menu-card .card_title {
@@ -545,8 +545,9 @@ footer {
 .menu-card .card_checkicon {
   background-color: #99e2d0;
   width: 100%;
-  font-size: 150px;
+  font-size: 130px;
   border-radius: 0px 20px 20px 0px;
+  margin: 0;
 }
 
 .order_button {
