--- a/assets/css/scss/base/_global.scss
+++ b/assets/css/scss/base/_global.scss
@@ -49,25 +49,24 @@ main,
 footer {
   animation: fadein 3s;
 }
-
-.loader {
+#loader-container{
   position: fixed;
-  top: 25em;
-  left: 3em;
-  border: 16px solid $background-color-grey;
-  border-top: 16px solid $primary-color;
-  border-bottom: 16px solid $secondary-color;
-  border-radius: 50%;
-  width: 300px;
-  height: 300px;
-  animation: spin 3s linear infinite, fadeout 2.2s forwards;
-  z-index: 2;
-  @media screen and (min-width: $tablet) {
-    top: 32em;
-    left: 16em;
-  }
-  @media screen and(min-width:$desktop) {
-    top: 25em;
-    left: 50em;
+  top:0;
+  right:0;
+  bottom:0;
+  left:0;
+  .loader {
+    position: relative;
+    top: 25%;
+    margin:auto;
+    border: 16px solid $background-color-grey;
+    border-top: 16px solid $primary-color;
+    border-bottom: 16px solid $secondary-color;
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    animation: spin 3s linear infinite, fadeout 2.2s forwards;
+    z-index: 2;
   }
 }
+
