--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,25 +1,9 @@
-@-webkit-keyframes displayheart {
-  from {
-    color: white;
-  }
-  to {
-    color: #ff79da;
-  }
-}
 @keyframes displayheart {
   from {
-    color: white;
+    color: lightgray;
   }
   to {
     color: #ff79da;
-  }
-}
-@-webkit-keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
   }
 }
 @keyframes spin {
@@ -28,17 +12,6 @@
   }
   100% {
     transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes fadein {
-  0% {
-    opacity: 0.2;
-  }
-  50% {
-    opacity: 0.2;
-  }
-  100% {
-    opacity: 1;
   }
 }
 @keyframes fadein {
@@ -52,17 +25,6 @@
     opacity: 1;
   }
 }
-@-webkit-keyframes fadeout {
-  0% {
-    opacity: 1;
-  }
-  75% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
 @keyframes fadeout {
   0% {
     opacity: 1;
@@ -72,17 +34,6 @@
   }
   100% {
     opacity: 0;
-  }
-}
-@-webkit-keyframes gradientshift {
-  0% {
-    background-position: 0% 92%;
-  }
-  50% {
-    background-position: 100% 9%;
-  }
-  100% {
-    background-position: 0% 92%;
   }
 }
 @keyframes gradientshift {
@@ -138,8 +89,7 @@ p {
 }
 
 img {
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 body {
@@ -150,35 +100,28 @@ body {
 header,
 main,
 footer {
-  -webkit-animation: fadein 3s;
-          animation: fadein 3s;
+  animation: fadein 3s;
 }
 
-.loader {
+#loader-container {
   position: fixed;
-  top: 25em;
-  left: 3em;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+#loader-container .loader {
+  position: relative;
+  top: 25%;
+  margin: auto;
   border: 16px solid #f6f6f6;
   border-top: 16px solid #9356dc;
   border-bottom: 16px solid #ff79da;
   border-radius: 50%;
   width: 300px;
   height: 300px;
-  -webkit-animation: spin 3s linear infinite, fadeout 2.2s forwards;
-          animation: spin 3s linear infinite, fadeout 2.2s forwards;
+  animation: spin 3s linear infinite, fadeout 2.2s forwards;
   z-index: 2;
-}
-@media screen and (min-width: 576px) {
-  .loader {
-    top: 32em;
-    left: 16em;
-  }
-}
-@media screen and (min-width: 992px) {
-  .loader {
-    top: 25em;
-    left: 50em;
-  }
 }
 
 .section1__searchbutton {
@@ -201,8 +144,7 @@ footer {
   background: linear-gradient(120deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   transition: all 500ms ease-in-out;
   background-size: 400% 400%;
-  -webkit-animation: gradientshift 3s ease-in-out infinite;
-          animation: gradientshift 3s ease-in-out infinite;
+  animation: gradientshift 3s ease-in-out infinite;
 }
 .section1__searchbutton:hover {
   transform: scale(1.2);
@@ -415,8 +357,7 @@ footer {
 }
 .resto-prev__card .description__hearticon:hover i:last-child {
   display: block;
-  -webkit-animation: displayheart 1s ease-in-out forwards;
-          animation: displayheart 1s ease-in-out forwards;
+  animation: displayheart 1s ease-in-out forwards;
 }
 @media screen and (min-width: 576px) {
   .resto-prev__card .description__hearticon {
@@ -566,12 +507,13 @@ footer {
   border-radius: 139px;
   box-shadow: 8px 10px 20px 7px rgba(223, 223, 223, 0.86);
   background: #ff79da;
+  background: -moz-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
+  background: -webkit-linear-gradient(-45deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   background: linear-gradient(135deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   background: linear-gradient(120deg, #ff79da 0%, #ff79da 16%, #9356dc 100%);
   transition: all 500ms ease-in-out;
   background-size: 400% 400%;
-  -webkit-animation: gradientshift 3s ease-in-out infinite;
-          animation: gradientshift 3s ease-in-out infinite;
+  animation: gradientshift 3s ease-in-out infinite;
 }
 .order_button:hover {
   transform: scale(1.2);
@@ -874,4 +816,4 @@ main .section3 {
   padding-top: 10px;
   padding-bottom: 80px;
   background-color: #f6f6f6;
-}/*# sourceMappingURL=style.css.map */
+}
