Configuration de l'animation de l'icône de validation des pages restaurant

--- a/assets/css/scss/utils/_keyframes.scss
+++ b/assets/css/scss/utils/_keyframes.scss
@@ -72,6 +72,26 @@
 }
 
 // Fin de l'animation du dégradé
+
+@keyframes checkiconshow {
+  from {
+      width: 0;
+  }
+
+  to {
+      width: 60px;
+  }
+}
+
+@keyframes checkiconhide {
+  from {
+      width: 60px;
+  }
+
+  to {
+      width: 0;
+  }
+}
 /*
 translateY();
 translate3d(x,y,z);
