--- a/assets/css/scss/components/_menu-cards.scss
+++ b/assets/css/scss/components/_menu-cards.scss
@@ -41,7 +41,7 @@
       width: 30%;
       @include flexbox-columncenter;
       flex-wrap: wrap;
-      height: 150px;
+      height: 81px;
     }
   }
   .splitleft {
@@ -51,7 +51,7 @@
   }
   .splitright {
     position: absolute;
-    top: 0px;
+    top: -2px;
     right: 0px;
   }
   .card_title {
@@ -75,13 +75,24 @@
   }
   .card_price {
     font-weight: bold;
-    margin-top: 2px;
+    margin: 0 20px 10px 0;
+    align-self: flex-end;
   }
   .card_checkicon {
     background-color: $tertiary-color;
     width: 100%;
-    font-size: 130px;
+    font-size: 135px;
     border-radius: 0px 20px 20px 0px;
     margin: 0;
+    display: block;
+    width: 0;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    line-height: 65px;
+    animation: checkiconhide 0.4s ease-in-out forwards;
+    &:hover {
+      animation: checkiconshow 0.4s ease-in-out forwards;
+    }
   }
 }
