--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,22 @@
     background-position: 0% 92%;
   }
 }
+@keyframes checkiconshow {
+  from {
+    width: 0;
+  }
+  to {
+    width: 60px;
+  }
+}
+@keyframes checkiconhide {
+  from {
+    width: 60px;
+  }
+  to {
+    width: 0;
+  }
+}
 /*
 translateY();
 translate3d(x,y,z);
@@ -434,7 +450,7 @@ footer {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    height: 150px;
+    height: 81px;
   }
 }
 .menu-card .splitleft {
@@ -447,7 +463,7 @@ footer {
 }
 .menu-card .splitright {
   position: absolute;
-  top: 0px;
+  top: -2px;
   right: 0px;
 }
 .menu-card .card_title {
@@ -481,14 +497,25 @@ footer {
 }
 .menu-card .card_price {
   font-weight: bold;
-  margin-top: 2px;
+  margin: 0 20px 10px 0;
+  align-self: flex-end;
 }
 .menu-card .card_checkicon {
   background-color: #99e2d0;
   width: 100%;
-  font-size: 130px;
+  font-size: 135px;
   border-radius: 0px 20px 20px 0px;
   margin: 0;
+  display: block;
+  width: 0;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  line-height: 65px;
+  animation: checkiconhide 0.4s ease-in-out forwards;
+}
+.menu-card .card_checkicon:hover {
+  animation: checkiconshow 0.4s ease-in-out forwards;
 }
 
 .order_button {
