--- a/assets/css/scss/layouts/_header.scss
+++ b/assets/css/scss/layouts/_header.scss
@@ -24,6 +24,11 @@
   }
 }
 
+.page-head_returnlink {
+  color: black;
+  cursor: pointer;
+}
+
 // Code à réviser
 // .index-head {
 //   @media screen and (min-width: $tablet) {
