--- a/assets/css/scss/pages/_restaurant.scss
+++ b/assets/css/scss/pages/_restaurant.scss
@@ -56,6 +56,19 @@
   }
   .maintitle_icon {
     font-size: $title-size;
+    i:last-child {
+      display: none;
+    }
+    &:hover {
+      color: transparent;
+      i:first-child {
+        display: none;
+      }
+      i:last-child {
+        display: block;
+        animation: displayheart 1s ease-in-out forwards;
+      }
+    }
     @media screen and (min-width: $tablet) {
       width: 100%;
     }
