--- a/assets/css/scss/pages/_restaurant.scss
+++ b/assets/css/scss/pages/_restaurant.scss
@@ -72,6 +72,9 @@
     @media screen and (min-width: $tablet) {
       width: 100%;
     }
+    @media screen and (min-width: $desktop) {
+      width: 3%;
+    }
   }
 }
 // Fin de la partie pour le menu
