--- a/assets/css/scss/utils/_keyframes.scss
+++ b/assets/css/scss/utils/_keyframes.scss
@@ -83,15 +83,15 @@
   }
 }
 
-@keyframes checkiconhide {
-  from {
-    width: 60px;
-  }
+// @keyframes checkiconhide {
+//   from {
+//     width: 60px;
+//   }
 
-  to {
-    width: 0;
-  }
-}
+//   to {
+//     width: 0;
+//   }
+// }
 
 @keyframes checkiconrotate {
   from {
